--- a/kodekloud_k8s_challenge/challenge_1/pod_jekyll.yaml
+++ b/kodekloud_k8s_challenge/challenge_1/pod_jekyll.yaml
@@ -38,9 +38,11 @@ metadata:
   name: jekyll-node-service
   namespace: development
 spec:
+  type: NodePort
   selector:
     run: jekyll
   ports:
     - protocol: TCP
       port: 8080
       targetPort: 4000
+      nodePort: 30097
