--- a/kodekloud_k8s_challenge/challenge_1/rolebinding.yaml
+++ b/kodekloud_k8s_challenge/challenge_1/rolebinding.yaml
@@ -4,12 +4,10 @@ metadata:
   name: developer-rolebinding
   namespace: development
 subjects:
-# You can specify more than one "subject"
 - kind: User
-  name: martin # "name" is case sensitive
+  name: martin 
   apiGroup: rbac.authorization.k8s.io
 roleRef:
-  # "roleRef" specifies the binding to a Role / ClusterRole
-  kind: Role #this must be Role or ClusterRole
-  name: developer-role # this must match the name of the Role or ClusterRole you wish to bind to
+  kind: Role 
+  name: developer-role 
   apiGroup: rbac.authorization.k8s.io
